[package]
name = "swissarmyhammer-cel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CEL (Common Expression Language) state management for SwissArmyHammer"

[dependencies]
# CEL interpreter
cel-interpreter = "0.8"

# Thread-safe global state
once_cell = { workspace = true }

# JSON serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
